[package]
name = "price-feeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chainlink", "defillama"]
chainlink = ["dep:futures"]
defillama = ["dep:defillama"]

[dependencies]
defillama = { git = "https://github.com/leruaa/defillama-rs", features = [
    "bigdecimal",
], optional = true }
futures = { version = "0.3", optional = true }
bigdecimal = "0.4"
alloy-primitives = "0.6"
alloy-sol-types = { version = "0.6", features = ["json"] }
alloy-providers = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
async-trait = "0.1"
anyhow = "1.0.72"
thiserror = "1.0.44"
once_cell = "1.18.0"
tracing = "0.1"

[dev-dependencies]
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
