[package]
name = "price-feeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chainlink", "defillama"]
chainlink = ["dep:futures"]
defillama = ["dep:defillama"]
tower = ["dep:tower"]

[dependencies]
defillama = { git = "https://github.com/leruaa/defillama-rs", features = [
    "bigdecimal",
], optional = true }
tokio = { version = "1", features = ["sync"] }
futures = { version = "0.3", optional = true }
tower = { version = "0.5", optional = true }
bigdecimal = "0.4"
alloy = { version = "0.5", features = [
    "network",
    "providers",
    "contract",
    "transports",
    "rpc",
    "rpc-types",
    "rpc-types-eth",
    "sol-types",
    "json",
] }
async-trait = "0.1"
anyhow = "1.0.72"
thiserror = "1.0.44"
once_cell = "1.18.0"
tracing = "0.1"
pin-project = "1"
parking_lot = "0.12"

[dev-dependencies]
alloy = { version = "0.5", features = ["transport-http"] }
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
